test(order): 픽스쳐 사용 변경